// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements JSONSchemaElement given Boolean JSON Schemas should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft202012Element
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element
          (MemberElement
            (StringElement)
            (BooleanElement))))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (BooleanElement)
      (BooleanElement)))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element
          (MemberElement
            (StringElement)
            (BooleanElement)))))))
`;

exports[`refractor elements JSONSchemaElement given embedded JSONSchemaElements should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft202012Element
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element
          (MemberElement
            (StringElement)
            (JSONSchemaDraft202012Element))))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft202012Element
        (MemberElement
          (StringElement)
          (JSONSchemaDraft202012Element)))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element
          (MemberElement
            (StringElement)
            (JSONSchemaDraft202012Element))))))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element)))))
`;

exports[`refractor elements JSONSchemaElement should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft202012Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (BooleanElement))))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element))))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft202012Element)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft202012Element)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft202012Element)))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft202012Element)))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft202012Element))))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (NumberElement)))
  (MemberElement
    (StringElement)
    (NullElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ArrayElement
          (StringElement)))))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (NumberElement)))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft202012Element)))
`;
